# obs-vkcapture

./: CMakeLists.txt  README.md  plugin-macros.h.in
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
data/locale/: cs-CZ.ini  de-DE.ini  en-US.ini  es-ES.ini  fr-FR.ini  it-IT.ini  ja-JP.ini  pl-PL.ini  pt-BR.ini  ru-RU.ini  uk-UA.ini
src/: capture.c  capture.h  capture_wayland.c  capture_wayland.h  dlsym.c  dlsym.h  elfhacks.c  elfhacks.h  ext-screencopy-v1.xml  glinject.c  glinject.h  glinject.version  obs-gamecapture.in  obs-glcapture  obs-glcapture.in  obs-vkcapture  obs_vkcapture.json.in  screencopy_unstable_v1.c  screencopy_unstable_v1.h  utils.h  vkcapture.c  vklayer.c  vklayer.h  vklayer.version  wlcursor.c  wlcursor.h  xcursor-xcb.c  xcursor-xcb.h
src/glad/: glad.c  glad.h
